--- a/apps/ionic/src/templates/favorites.html
+++ b/apps/ionic/src/templates/favorites.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="hideNavigationMenu">
     <ion-nav-title>{{state.title}}</ion-nav-title>
-    <ion-content style="background-color: #f2f2f2">
+    <ion-content>
         <ion-refresher on-refresh="refreshFavorites()"></ion-refresher>
         <div class="list card" ng-click="favoriteAddButtonClick()">
             <a id="addFavoriteBtn" style="white-space: normal; " class="item item-icon-left ">
