--- a/apps/ionic/src/templates/items/data-source-item.html
+++ b/apps/ionic/src/templates/items/data-source-item.html
@@ -1,5 +1,5 @@
 <!--suppress XmlDuplicatedId -->
-<div class="row"
+<div class="row data-source-item"
      id="{{connector.name}}-item">
     <div class="col col-20"
          style="padding-top: 10px;">
