--- a/apps/ionic/src/templates/notification-preferences.html
+++ b/apps/ionic/src/templates/notification-preferences.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="hideNavigationMenu">
     <ion-nav-title>Notification Settings</ion-nav-title>
-    <ion-content style="background-color: #f2f2f2">
+    <ion-content>
         <div class="list card">
             <a href="" ng-show="!user.displayName"
                ng-click="completelyResetAppStateAndSendToLogin('clicked sign in as different user')" class="item ">
