--- a/apps/ionic/src/templates/reminders-inbox-compact.html
+++ b/apps/ionic/src/templates/reminders-inbox-compact.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="true">
     <ion-nav-title>{{state.title}}</ion-nav-title>
-    <ion-content style="background-color: #f2f2f2">
+    <ion-content>
         <div id="notification-icon"
              ng-click="showActionSheetForNotification(trackingReminderNotifications[0], $event)"
              class="row">
