--- a/apps/ionic/src/templates/reminders-inbox.html
+++ b/apps/ionic/src/templates/reminders-inbox.html
@@ -1,7 +1,7 @@
 <ion-view hide-nav-bar="hideNavigationMenu">
     <ion-nav-title>{{state.title}}</ion-nav-title>
     <ion-content scroll="true" overflow-scroll="true">
-        <!--<ion-content style="background-color: #f2f2f2" ng-class="{ isBrowserView : platform.isWeb == true } "> This breaks pull down to refresh in browser-->
+        <!--<ion-content  ng-class="{ isBrowserView : platform.isWeb == true } "> This breaks pull down to refresh in browser-->
         <ion-refresher on-refresh="syncNotifications({noCache: true})"></ion-refresher>
         <div ng-if="stateParams.showHelpCards === true && defaultHelpCards && defaultHelpCards[0]">
             <div ng-repeat="helpCard in defaultHelpCards | limitTo:1">
