--- a/apps/ionic/src/templates/track-primary-outcome-variable.html
+++ b/apps/ionic/src/templates/track-primary-outcome-variable.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="hideNavigationMenu">
     <ion-nav-title>{{primaryOutcomeVariable.name}}</ion-nav-title>
-    <ion-content style="background-color: #f2f2f2"
+    <ion-content
                  ng-class="{ isBrowserView : platform.isWeb == true }">
         <div class="card primary-outcome-variable-reporting">
             <div class="item item-text-wrap">
