--- a/apps/ionic/src/templates/settings.html
+++ b/apps/ionic/src/templates/settings.html
@@ -6,7 +6,7 @@
              class="list card" ng-click="goToState('app.upgrade')">
             <a class="item"><i class="icon ion-ios-color-wand"></i> &nbsp; {{appSettings.appDisplayName}} Plus</a>
         </div>
-        <div id="logout" class="list card">
+        <div id="logout">
             <a href="" ng-show="!user"
                ng-click="completelyResetAppStateAndSendToLogin('clicked sign in in settings page')" class="item ">
                 Account <p>Tap to sign in</p>
@@ -16,7 +16,7 @@
                 <p>Tap to sign out</p>
             </a>
         </div>
-        <div id="contact-us" class="list card">
+        <div id="contact-us">
             <a ng-click="contactUs()" class="item ">
                 <i class="icon ion-help-buoy"></i> &nbsp; Help & Feedback
             </a>
@@ -149,7 +149,7 @@
             </ion-toggle>
         </div>-->
         <!-- Slows down the app, so hide until click -->
-        <div id="time-zone" class="card sign-in" ng-if="user" ng-click="showTimeZone = !showTimeZone">
+        <div id="time-zone" ng-if="user" ng-click="showTimeZone = !showTimeZone">
             <div class="item item-divider"><i class="icon ion-clock"></i>&nbsp; Your Time Zone &nbsp;</div>
             <div class="item" ng-if="showTimeZone">
                 <ion-spinner></ion-spinner>
@@ -163,7 +163,7 @@
                 </md-input-container>
             </div>
         </div>
-        <div id="user-description" class="list card" ng-show="user">
+        <div id="user-description"  ng-show="user">
             <a ng-click="state.showBioModalPromptPopup($event)" class="item ">
                 <i class="icon ion-email"></i> &nbsp Edit Your Bio
                 <p ng-if="!user.description" style="white-space: normal">Displayed on studies that you publish</p>
@@ -173,7 +173,7 @@
 <!--        <div id="downgrade-button" ng-if="user && user.stripeActive" class="list card" ng-click="downgrade()">
             <a class="item"> <i class="icon ion-ios-color-wand"></i> &nbsp; Downgrade to Lite </a>
         </div>-->
-        <div id="image-credits" class="list card"
+        <div id="image-credits"
              ng-click="openUrl('https://app.quantimo.do/api/v2/image-credits')">
             <a class="item"><i class="icon ion-ios-camera-outline"></i>&nbsp;Image Credits</a>
         </div>
@@ -184,14 +184,14 @@
                 🅖 Ask Dr. Modo to Record a Measurement
             </a>
         </div>-->
-        <div id="Developer-Settings" class="list card"
+        <div id="Developer-Settings"
              ng-click="goToState('app.configuration')">
             <a class="item"><i class="ion-gear-a"> &nbsp;
                 Developer Settings
             </i></a>
         </div>
         <div id="delete-account" style="text-align: center;">
-            <md-button ng-if="user" ng-click="openDeleteUserAccountDialog($event)">
+            <md-button class="md-primary" ng-if="user" ng-click="openDeleteUserAccountDialog($event)">
                 Delete Account
             </md-button>
         </div>
